fix Corrected inconsistency in display format value for meters

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -37,11 +37,11 @@
             </div>
 
             <div class="input-group">
-              <input aria-label="Altura" required type="number" step="10" id="height" placeholder="180cm">
+              <input aria-label="Altura" required type="number" step="1" id="height" placeholder="180cm">
             </div>
           </div>
 
-          <button class="calc-button">Calcular IMC</button>
+          <button class="calc-button" type="submit">Calcular IMC</button>
           
         </fieldset>
 
@@ -57,7 +57,7 @@
       </form>
     </main>
   </div>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
